@startuml
package controller{
class Ctrl05v2 {
    - _house: House
    - _roomsDTOAndRooms: Map<RoomDTO, Room>
    + Ctrl05v2(_house: House)
    + getExistingRooms(): List<RoomDTO>
    + addDeviceToRoom(roomDTO: RoomDTO, deviceDTO: DeviceDTO): boolean
}
}
package domain{
package house{
class House {
    - _location: Location
    - _locationFactory: LocationFactory
    - _roomFactory; RoomFactory

    + House(locationFactory: LocationFactory, roomFactory: RoomFactory)
    + configureLocation(street: String, doorNumber: String, \nzip: String, city: String,country: String, \nlatitude: double, longitude: double): Location
    + getLocation(): Location
    + addRoom(name: String, houseFloor: String, \nheight: double, width: double, \ndeviceFactory : DeviceFactory, \ndimensionsFactory: DimensionsFactory): boolean
    + roomExists(name: String): boolean
    + getRooms(): List<Room>
    + getRoom(name: String): Room
    + getDevicesByRoomAndFunctionality( devicesByFunctionality:\nDevicesByFunctionality): Map <String, List<DeviceRoomDTO>>
    + toString(): String
}
}
package room{
class Room {
    - _name: String
    - _houseFloor: String
    - _dimensions: Dimensions
    - _devices: List<Device>
    - _deviceFactory: DeviceFactory
    - _dimensionsFactory: DimensionsFactory
    + Room(name: String, houseFloor: String, \nheight: double, width: double, \ndeviceFactory: DeviceFactory, \ndimensionsFactory: DimensionsFactory): Room
    - validateArguments(name: String, houseFloor: String): boolean
    + getName(): String
    + getFloor(): String
    + getDimensions(): Dimensions
    + addDevice(name: String, model: String): boolean
    - deviceExists(name: String): boolean
    + getDevice(name: String): Device
    + getDevices(): List<Device>
    + toString(): String
}
}
package device{
class Device {
- _name : String;
- _deviceModel : String;
- _sensors : List<Sensor>;
- _actuators : List<Actuator>;
- _isActive : boolean
- _actuatorCatalogue : ActuatorCatalogue
- _sensorCatalogue : SensorCatalogue
+ Device (name : String, deviceModel : String) : Device
- validateArguments(name: String, deviceModel: String): boolean
+ switchDevice (isActive : boolean) : boolean
+ getName() : String
+ getIsActive() : boolean
+ getDeviceModel() : String
+ getSensor (sensorModel : String) : Sensor
+ getActuator (actuatorModel : String) : Actuator
+ addSensor (strModel : String, name : String, \nsensorCatalogue SensorCatalogue, valueFactory : ValueFactory) : Sensor
+ addActuator (strModel : String, name : String, \nactuatorCatalogue ActuatorCatalogue, valueFactory : ValueFactory) : Actuator
+ getSensors() : List<Sensor>
+ getActuators() : List<Actuator>
+ sensorExists (name : String) : boolean
+ actuatorExists (name : String) : boolean
+ getSensorFunctionalities() : List<SensorFunctionality>
+ getActuatorFunctionalities() : List<ActuatorFunctionality>
}
}
package dto{
class RoomDTO{
+ name : String
+ floor : String
+ height : double
+ width : double
+ height : double
+ RoomDTO ( room : Room, dimensions : Dimensions) : RoomDTO
+ toString() : String
}

class DeviceDTO{
+ name : String
+ deviceModel : String
+ (isActive : boolean)
+ DeviceDTO (device : Device) : DeviceDTO
}

class RoomMapper{
+ Domain2DTO (room: Room) : RoomDTO
+ Domain2DTO (rooms: List<Room>) : Map<RoomDTO, room>
}
}
Ctrl05v2 "1" ..> "1" House : "uses"
Ctrl05v2 "1" ..> "1" RoomDTO : "uses"
RoomMapper "1" ..> "1" RoomDTO : "uses"
Ctrl05v2 "1" ..> "1" DeviceDTO : "uses"
Ctrl05v2 "1" ..> "1" RoomMapper : "uses"
RoomMapper "1" ..> "1" Room : "uses"
House "1" *-right- "*" Room :"has"
Room "1"  *-right-  "*" Device: "has"

@enduml